# WaveNet_from_scratch

./: .gitignore  README.md  generator.py  layers.py  names.txt  pyproject.toml  test.csv
notebooks/: model.ipynb  sound_model.ipynb
tests/: Wavenet_test.py
